更新配置文件

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,4 +53,4 @@ jobs:
       - name: Deploy Cloudflare Worker
         run: |
           cd cloudflare-worker
-          wrangler deploy
+          wrangler deploy src/index.js
