--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Set up Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.145.0'  # 指定 Hugo 版本
-          extended: true  # 如果需要扩展版 Hugo
+          hugo-version: '0.145.0'
+          extended: true
 
       - name: Build Hugo site
-        run: hugo --minify --gc  # 清理缓存并构建
+        run: hugo --minify --gc
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -35,22 +35,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'  # 使用 Node.js v18
-
       - name: Install Wrangler
-        run: npm install -g wrangler@latest
-
-      - name: Configure Cloudflare Worker environment variables
-        run: |
-          cd cloudflare-worker
-          echo "ALIPAY_APP_ID=${{ secrets.ALIPAY_APP_ID }}" >> .env
-          echo "ALIPAY_PRIVATE_KEY=${{ secrets.ALIPAY_PRIVATE_KEY }}" >> .env
-          echo "ALIPAY_PUBLIC_KEY=${{ secrets.ALIPAY_PUBLIC_KEY }}" >> .env
+        run: npm install -g wrangler
 
       - name: Deploy Cloudflare Worker
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
           cd cloudflare-worker
           wrangler deploy
