--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cloudflare-worker",
   "version": "1.0.0",
-  "main": "build.js",
+  "main": "dist/index.js",
   "dependencies": {
     "acorn": "^8.14.0",
     "acorn-walk": "^8.3.2",
-    "alipay-sdk": "^4.13.0",
+    "alipay-sdk": "^3.6.2",
     "as-table": "^1.0.55",
     "blake3-wasm": "^2.1.5",
     "color": "^4.2.3",
@@ -44,13 +44,14 @@
     "zod": "^3.22.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "esbuild": "^0.25.1"
+    "esbuild": "^0.17.19"
   }
 }
