--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Hugo Site and Cloudflare Worker
+name: Deploy Hugo Site
 
 on:
   push:
@@ -27,27 +27,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-
-  deploy-worker:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Wrangler
-        run: npm install -g wrangler
-
-      - name: Install dependencies
-        working-directory: ./cloudflare-worker
-        run: npm install
-
-      - name: Build Worker
-        working-directory: ./cloudflare-worker
-        run: npm run build
-
-      - name: Deploy Cloudflare Worker
-        working-directory: ./cloudflare-worker
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        run: wrangler deploy
